--- a/views/about_me.erb
+++ b/views/about_me.erb
@@ -1,1 +1,16 @@
-<p><h1>About me</h1></p>
+<h1>About Me</h1>
+<h2>Skills</h2>
+
+<ul>
+
+  <% @skills.each do |skill| %>
+  <li> <%= skill %> </li>
+  <% end %>
+</ul>
+
+<h2>Interests</h2>
+<ul>
+  <% @interests.each do |interest| %>
+    <li> <%= interest %> </li>
+  <% end %>
+</ul>
